# kalshi-clone

./: .gitignore  Cargo.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: EventCard.tsx  GoogleButton.tsx  MarketCard.tsx  Nav.tsx  OrderBook.tsx  OrderTicket.tsx  PriceChart.tsx  ResolveControls.tsx  Skeleton.tsx  Toast.tsx  TradesTape.tsx
frontend/src/lib/: format.ts  marketMeta.ts  useAsync.ts  useMarketSocket.ts
frontend/src/pages/: CreateMarketPage.tsx  EventPage.tsx  LoginPage.tsx  MarketPage.tsx  MarketsPage.tsx  PortfolioPage.tsx
migrations/: 20260530110938_create_markets.sql  20260601071140_create_users.sql  20260602074247_create_orders_and_trades.sql  20260603171700_create_positions.sql  20260603223238_create_balances.sql  20260607120000_add_admin_and_settlement.sql  20260612203410_add_google_auth_to_users.sql  20260613120000_add_events_and_seed.sql
src/: account.rs  auth.rs  config.rs  error.rs  events.rs  extractors.rs  health.rs  main.rs  markets.rs  models.rs  oauth.rs  order_book.rs  orders.rs  settlement.rs  ws.rs
