[package]
name = "kalshi-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13"
bcrypt = "0.19.1"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4.32"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
